[tool.poetry]
name = "pyrk"
version = "2023.11.09"
description = "ode integration rk4 rk runge kutta"
authors = ["walchko <walchko@users.noreply.github.com>"]
readme = "readme.md"
license = "MIT"
homepage = "https://pypi.org/project/pyrk/"
repository = 'https://github.com/walchko/pyrk'
# documentation = "http://..."
keywords = ["ode", "rk4", "runge", "kutta"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Libraries :: Application Frameworks'
]

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]
pytest = "*"
numpy = "*"

[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.masonry.api"
